src/components/RecordPreview/recordPreview.css
.record-preview-animate {
  pointer-events: none;
  transform-origin: center;
  transform: rotate(50deg);
  animation: rotateDisc 25s linear ;
  animation-iteration-count: infinite;
}

@keyframes rotateDisc {
  from {
    transform: rotate(50deg);
  }
  to {
    transform: rotate(409deg);
  }
}
#record-preview {
  position: relative;
  grid-column: 1;
  grid-row: 1;
  top: 410px;
  left: 68px;
  transform: rotate(45deg);
}
.record-player {
  position: relative;
  grid-column: 1;
  grid-row: 1;
  width: 980px;
}

.record-preview-container {
  overflow: hidden;
  pointer-events: none;
  display: grid;
  position: absolute;
  top: calc(800px+8vw);
  left: 0px;
  z-index: 1;
  width: 100%;
  height: 1200px;
}

.record-preview-inner {
  pointer-events: none;
  display: grid;
  position: relative;
  left: 0px;
  top: 100px;
  margin: 0 auto;
  width: 1000px;

  transform-origin: left top;
}

